libsoy/vapi/ode-0.11.vapi

/*
 *  Vala API for Open Dynamics Engine (ode.vapi)
 *
 *  Copyright (C) 2006,2007,2008,2009,2010,2011,2012,2013 Copyleft Games Group
 *
 *  This program is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU Lesser General Public License as published
 *  by the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU Lesser General Public License for more details.
 *
 *  You should have received a copy of the GNU Lesser General Public License
 *  along with this program; if not, see http://www.gnu.org/licenses
 *
 */

using GLib;

[CCode (cprefix = "d", lower_case_cprefix = "d",
        cheader_filename = "soy-1/ode.h")]
namespace ode {

    /***********************************************************************\
      common.h                                                             */

#if dSINGLE
    [FloatingType (rank = 1)]
    public struct Real : float { }
#else
    [FloatingType (rank = 2)]
    public struct Real : double { }
#endif

    [Compact, CCode (cname="dxVector3")]
    public class Vector3 {
        public Vector3 ( );
        public Real x;
        public Real y;
        public Real z;
        public Real _w;
        [CCode (cname="dSafeNormalize3")]
        public static int SafeNormalize ( );
    }

    public struct Vector4 {
        Real x;
        Real y;
        Real z;
        Real w;
        [CCode (cname="dSafeNormalize4")]
        public static int SafeNormalize ( );
    }

    [Compact, CCode (cname="dxMatrix3")]
    public class Matrix3 {
        public Matrix3 ( );
        public Real m0;
        public Real m1;
        public Real m2;
        public Real m3;
        public Real m4;
        public Real m5;
        public Real m6;
        public Real m7;
        public Real m8;
        public Real m9;
        public Real ma;
        public Real mb;
    /***********************************************************************\
      rotation.h                                                           */
        [CCode (cname="dRSetIdentity")]
        public void SetIdentity();
        [CCode (cname="dRFromAxisAndAngle")]
        public void FromAxisAndAngle (Real ax, Real ay, Real az, Real angle);
        [CCode (cname="dRFromEulerAngles")]
        public void FromEulerAngles(Real phi, Real theta, Real psi);
        [CCode (cname="dRFrom2Axes")]
        public void From2Axes(Real ax, Real ay, Real az, 
                              Real bx, Real by, Real bz);
        [CCode (cname="dRFromZAxis")]
        public void FromZAxis(Real ax, Real ay, Real az);
    }

    public struct Matrix4 {
        Real m0;
        Real m1;
        Real m2;
        Real m3;
        Real m4;
        Real m5;
        Real m6;
        Real m7;
        Real m8;
        Real m9;
        Real ma;
        Real mb;
        Real mc;
        Real md;
        Real me;
        Real mf;
    }

    [Compact, CCode (cname="dxQuaternion")]
    public class Quaternion {
        public Quaternion ( );
        public Real w;
        public Real x;
        public Real y;
        public Real z;
        [CCode (cname="dQSetIdentity")]
        public void SetIdentity();
        [CCode (cname="dQFromAxisAndAngle")]
        public void FromAxisAndAngle(Real ax, Real ay, Real az, 
                                     Real angle);
        [CCode (cname="dQFromEulerAngles")]
        public void FromEulerAngles(Real phi, Real theta, Real psi);
        [CCode (cname="dQFrom2Axes")]
        public void From2Axes(Real ax, Real ay, Real az, 
                              Real bx, Real by, Real bz);
        [CCode (cname="dQFromZAxis")]
        public void FromZAxis(Real ax, Real ay, Real az);
    }

    public struct AABB {
        Real x1;
        Real x2;
        Real y1;
        Real y2;
        Real z1;
        Real z2;
    }

    public static void    InitODE ( );
    public static int     InitODE2 (uint uiInitFlags);
    public static int     AllocateODEDataForThread (uint uiAllocateFlags);
    public static void    CleanupODEAllDataForThread ( );
    public static void    CloseODE ( );


    [CCode (cname="dJointType", cprefix="dJointType")]
    public enum JointType {
        None = 0,           /* or "unknown" */
        Ball,
        Hinge,
        Slider,
        Contact,
        Universal,
        Hinge2,
        Fixed,
        Null,
        AMotor,
        LMotor,
        Plane2D,
        PR,
        PU,
        Piston
    }

	[CCode (cname="dParam", cprefix="dParam")]
	public enum Param {
		LoStop = 0,
	    HiStop,
		Vel,
		FMax,
		FudgeFactor,
		Bounce,
		CFM,
		StopERP,
		StopCFM,
		SuspensionERP,
		SuspensionCFM,
		ERP,
        ParamsInGroup,

        Group1 = 0x000,
		LoStop1 = 0x000,
	    HiStop1,
		Vel1,
		FMax1,
		FudgeFactor1,
		Bounce1,
		CFM1,
		StopERP1,
		StopCFM1,
		SuspensionERP1,
		SuspensionCFM1,
		ERP1,

        Group2 = 0x100,
		LoStop2 = 0x100,
	    HiStop2,
		Vel2,
		FMax2,
		FudgeFactor2,
		Bounce2,
		CFM2,
		StopERP2,
		StopCFM2,
		SuspensionERP2,
		SuspensionCFM2,
		ERP2,

        Group3 = 0x200,
		LoStop3 = 0x200,
	    HiStop3,
		Vel3,
		FMax3,
		FudgeFactor3,
		Bounce3,
		CFM3,
		StopERP3,
		StopCFM3,
		SuspensionERP3,
		SuspensionCFM3,
		ERP3,

		Group = 0x100
    }

    [CCode (cname="dJointFeedback")]
    public struct JointFeedback {
        Vector3 f1;          /* force applied to body 1 */
        Vector3 t1;          /* torque applied to body 1 */
        Vector3 f2;          /* force applied to body 2 */
        Vector3 t2;          /* torque applied to body 2 */
    }


    /***********************************************************************\
      objects.h                                                            */

    [Compact]
    [CCode (cname="struct dxWorld", cprefix="dWorld",
            free_function="dWorldDestroy")]
    public class World {
        [CCode (cname = "dWorldCreate")]
        public World( );
        public void         SetGravity (Real x, Real y, Real z);
        public void         GetGravity (Vector3 gravity);
        public void         SetERP (Real erp);
        public Real         GetERP ( );
        public void         SetCFM (Real cfm);
        public Real         GetCFM ( );
        public void         Step (Real stepsize);
        public void         ImpulseToForce (Real stepsize,
                                            Real x, Real y, Real z,
                                            Vector3 force);
        public void         QuickStep (Real stepsize);
        public void         SetQuickStepNumIterations (int num);
        public int          GetQuickStepNumIterations ( );
        public void         SetQuickStepW (Real over);
        public Real         GetQuickStepW ( );
        public void         SetContactMaxCorrectingVel (Real vel);
        public Real         GetContactMaxCorrectingVel ( );
        public void         SetContactSurfaceLayer (Real depth);
        public Real         GetContactSurfaceLayer ( );
        public void         StepFast1 (Real stepsize, int maxiters);
        public void         SetAutoEnableDepthSF1 (int autoEnable);
        public int          GetAutoEnableDepthSF1 ( );
        public Real         GetAutoDisableLinearThreshold ( );
        public void         SetAutoDisableLinearThreshold (Real threshold);
        public Real         GetAutoDisableAngularThreshold ( );
        public void         SetAutoDisableAngularThreshold (Real threshold);
        public Real         GetAutoDisableLinearAverageThreshold  ( );
        public void         SetAutoDisableLinearAverageThreshold  (Real ths);
        public Real         GetAutoDisableAngularAverageThreshold ( );
        public void         SetAutoDisableAngularAverageThreshold (Real ths);
        public int          GetAutoDisableAverageSamplesCount ( );
        public void         SetAutoDisableAverageSamplesCount (uint a);
        public int          GetAutoDisableSteps         ( );
        public void         SetAutoDisableSteps         (int steps);
        public Real         GetAutoDisableTime          ( );
        public void         SetAutoDisableTime          (Real time);
        public int          GetAutoDisableFlag          ( );
        public void         SetAutoDisableFlag          (int disable);
        public Real         GetLinearDampingThreshold   ( );
        public void         SetLinearDampingThreshold   (Real threshold);
        public Real         GetAngularDampingThreshold  ( );
        public void         SetAngularDampingThreshold  (Real threshold);
        public Real         GetLinearDamping            ( );
        public void         SetLinearDamping            (Real scale);
        public Real         GetAngularDamping           ( );
        public void         SetAngularDamping           (Real scale);
        public void         SetDamping                  (Real linear_scale,
                                                         Real angular_scale);
        public Real         GetMaxAngularSpeed          ( );
        public void         SetMaxAngularSpeed          (Real max_speed);
    }
